# MethodEncryption

./: .gitignore  README.md
JvmAcquirer/: CMakeLists.txt
JvmAcquirer/include/: java_interop.h
JvmAcquirer/include/break/: jvm_break_points.h
JvmAcquirer/source/: java_interop.cpp  main.cpp
JvmAcquirer/source/utility/: vm_helper.cpp
NativeHandler/: CMakeLists.txt
NativeHandler/include/: header.hpp
NativeHandler/include/break/: break_point_info.h  byte_code_info.h
NativeHandler/include/classes/: klass.h  method.h
NativeHandler/include/runtime/: java_thread.h
NativeHandler/include/utility/: getter.asm  jvm_internal.h
NativeHandler/source/: java_interop.cpp  main.cpp
NativeHandler/source/classes/: bytecode.cpp  method.cpp  symbol.cpp
NativeHandler/source/runtime/: java_thread.cpp
NativeHandler/source/utility/: jvm_internal.cpp  vm_helper.cpp
Obfuscator/: pom.xml
Obfuscator/src/main/java/me/baier/: NativeHandler.java
Obfuscator/src/main/java/un/defined/: Breakpoint.java
Obfuscator/src/main/java/un/defined/components/: DeleteLineOpcodes.java  LinkMethodConstantPool.java
Obfuscator/src/main/java/un/defined/config/: ClassMap.java  (+2 more)
RuntimeDumper/: CMakeLists.txt
RuntimeDumper/include/: header.hpp  magic_enum.hpp
RuntimeDumper/include/classes/: header.hpp
RuntimeDumper/include/utility/: getter.asm  jvm_internal.h
RuntimeDumper/source/: java_interop.cpp  main.cpp
RuntimeDumper/source/classes/: klass.cpp
RuntimeDumper/source/jnif/: base.cpp
untitled3/: pom.xml
untitled3/src/main/java/un/defined/: Breakpoint.java  Main.java
(+16 files in other folders)
